<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Personal Fitness Coach</string>
    <string name="menu_settings">Settings</string>
    <string name="main_add">Añadir</string>
    <string name="main_list">Listar</string>
    <string name="green">verde</string>
    <string name="yellow">amarillo</string>
    <string name="red">rojo</string>
    <string name="hello">Rellena los valores y dale al botón</string>
    <string name="label_calories">Calorias</string>
    <string name="label_sugars">Azúcares</string>
    <string name="label_fats">Grasas</string>
    <string name="button_calculate">Calcular</string>
    <string name="addFoodButton">Añadir</string>
    <string name="resultSugarsText">Azúcares</string>
    <string name="resultFatsText">Grasas</string>
    <string name="resultFinalText">El alimento es</string>
    <string name="notFilledAlert">Debes rellenar los tres valores.</string>
    <string name="addFoodNameText">Introduce el nombre de la comida</string>
    <string name="mainMenuFoodsList">Lista de comidas</string>
    <string name="foodsListMenuMain">Inicio</string>
    <string name="newFoodInserted">ha sido añadida.</string>
    <string name="label_delete">Eliminar</string>
    <string name="label_edit">Editar</string>
    <string name="deleteFoodMessage">ha sido eliminada</string>
    <string name="editFoodMessage">La comida ha sido actualizada</string>
    <string name="name">Nombre:</string>
    <string name="description">Descripción:</string>
    <string name="addExerciseTitle">Añadir nuevo ejercicio</string>
    <string name="editExerciseTitle">Editar ejercicio</string>
    <string name="exerciseNameBlank">El nombre del ejercicio está vacío</string>
    <string name="exerciseNameDuplicated">El nombre del ejercicio está repetido</string>
    <string name="exerciseCreated">El ejercicio ha sido creado</string>
    <string name="exerciseDeleted">El ejercicio ha sido eliminado</string>
    <string name="exerciseEdited">El ejercicio ha sido editado</string>
    <string name="save">Guardar</string>
    <string name="exercises_label">Ejercicios</string>
    <string name="exercise_label">Ejercicio</string>
    <string name="trainingCreated">El entrenamiento ha sido guardado</string>
    <string name="trainingDeleted">El entrenamiento ha sido borrado</string>
    <string name="trainingNameBlank">El nombre del entrenamiento está vacío</string>
    <string name="trainingNameDuplicated">El nombre del entrenamiento está repetido</string>
    <string name="training_label">Entrenamiento</string>
    <string name="addExerciseToTraining">Añadir un ejercicio</string>
    <string name="duration">Duración</string>
    <string name="repetitions">Repeticiones</string>
    <string name="emptyExercisesList">La lista de ejercicios está vacía.</string>
    <string name="label_play">Ejecutar</string>
    <string name="totalTimeLeft">Total restante:</string>
    <string name="resumePause">Continuar/Pausa</string>
    <string name="done">Hecho</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="repetition">Repetición</string>

</resources>