<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addExerciseToTraining"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/exercise_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/exerciseSpinner"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/duration"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/minutes"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true" >
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_weight="2"
            android:text="m"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/seconds"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:layout_weight="2"
            android:text="s"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/defaultMargin" >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repetitions"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/repetitions"
            android:layout_width="60dip"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/defaultMargin"
            android:ems="10"
            android:inputType="number"
            android:selectAllOnFocus="true" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/save" 
        android:onClick="commitButton"/>

</LinearLayout>