<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/valuesLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/rowCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/caloriesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_calories"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/caloriesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:textStyle="bold" 
                android:textSize="20dp"/>
        </TableRow>

        <TableRow
            android:id="@+id/rowSugars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/sugarsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_sugars"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/sugarsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:textColor="#000"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:id="@+id/rowFats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/fatsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_fats"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/fatsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:paddingBottom="2dp"
                android:paddingLeft="5dp"
                android:paddingTop="2dp"
                android:textColor="#000"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>